2009-09-07  Laszlo Gombos  <laszlo.1.gombos@nokia.com>

        Unreviewed, build fix.

        [Qt] Fix build after SHARED_WORKERS are enabled by default (r48131)

        * WebCore.pro:

2009-09-07  Drew Wilson  <atwilson@google.com>

        Unreviewed build fix.

        Temporarily removed depenency between JSEventTarget.cpp and WebSocket.h in an attempt to fix a windows build break.

        * bindings/js/JSEventTarget.cpp:
        (WebCore::toEventTarget):

2009-09-07  Drew Wilson  <atwilson@google.com>

        Reviewed by David Levin.

        Enable SHARED_WORKERS by default.
        https://bugs.webkit.org/show_bug.cgi?id=28959

        Tests (enabled in a separate patch):
               fast/workers/shared-worker-constructor.html
               fast/workers/shared-worker-context-gc.html
               fast/workers/shared-worker-event-listener.html
               fast/workers/shared-worker-exception.html
               fast/workers/shared-worker-frame-lifecycle.html
               fast/workers/shared-worker-gc.html
               fast/workers/shared-worker-lifecycle.html
               fast/workers/shared-worker-load-error.html
               fast/workers/shared-worker-location.html
               fast/workers/shared-worker-navigator.html
               fast/workers/shared-worker-replace-global-constructor.html
               fast/workers/shared-worker-replace-self.html
               fast/workers/shared-worker-shared.html
               fast/workers/shared-worker-simple.html
               http/tests/workers/shared-worker-importScripts.html
               http/tests/workers/shared-worker-redirect.html
               http/tests/xmlhttprequest/workers/shared-worker-close.html
               http/tests/xmlhttprequest/workers/shared-worker-methods-async.html
               http/tests/xmlhttprequest/workers/shared-worker-methods.html
               http/tests/xmlhttprequest/workers/shared-worker-xhr-file-not-found.html
