@@ -80,9 +80,7 @@
 
 #if ENABLE(WEB_SOCKETS)
 #include "JSWebSocket.h"
-// FIXME(ukai@chromium.org): Disabled this include to fix Windows build. Re-enable this include once the Windows build files are fixed.
-//#include "WebSocket.h"
-class WebSocket;
+#include "WebSocket.h"
 #endif
 
 using namespace JSC;
@@ -196,8 +194,7 @@ EventTarget* toEventTarget(JSC::JSValue value)
 #endif
 
 #if ENABLE(WEB_SOCKETS)
-// FIXME(ukai@chromium.org): Uncomment this when it compiles under Windows.
-//    CONVERT_TO_EVENT_TARGET(WebSocket)
+    CONVERT_TO_EVENT_TARGET(WebSocket)
 #endif
 
     return 0;
