@@ -1,3 +1,12 @@
+2009-09-07  Drew Wilson  <atwilson@google.com>
+
+        Unreviewed speculative build fix.
+
+        Reverted previous build fix as it didn't fix the problem.
+
+        * bindings/js/JSEventTarget.cpp:
+        (WebCore::toEventTarget):
+
 2009-09-07  Laszlo Gombos  <laszlo.1.gombos@nokia.com>
 
         Unreviewed, build fix.
